feat: integrate email notifications for abuse control

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,8 @@ ALLOWED_USERNAMES=[]
 # PostHog
 POSTHOG_HOST=https://us.i.posthog.com
 POSTHOG_API_KEY=
+
+# Emails
+RESEND_API_KEY=
+SENDER_EMAIL=
+ABUSE_CONTROL_EMAIL=
